- Updated grid header styling to add a border and adjusted the sticky offset so it no longer overlaps the header border.

--- a/RockWeb/Styles/rock-components/grid-obsidian.less
+++ b/RockWeb/Styles/rock-components/grid-obsidian.less
@@ -31,9 +31,12 @@
     top: var(--sticky-element-offset);
   }
 
+  .grid-header-prepend {
+    border-bottom: 1px solid var(--color-interface-soft);
+  }
   .grid-obsidian.grid-sticky .sticky-column-header {
     position: sticky;
-    top: ~"calc(var(--sticky-element-offset) + 56px)";
+    top: ~"calc(var(--sticky-element-offset) + 57px)";
     z-index: 1;
   }
 
